--- a/composer.json
+++ b/composer.json
@@ -28,16 +28,16 @@
         "package"
     ],
     "require": {
-        "php": "^8.1",
-        "illuminate/support": "^10.0|^11.0",
-        "illuminate/database": "^10.0|^11.0",
-        "illuminate/validation": "^10.0|^11.0",
-        "illuminate/broadcasting": "^10.0|^11.0",
+        "php": "^8.2",
+        "illuminate/support": "^10.0|^11.0|^12.0",
+        "illuminate/database": "^10.0|^11.0|^12.0",
+        "illuminate/validation": "^10.0|^11.0|^12.0",
+        "illuminate/broadcasting": "^10.0|^11.0|^12.0",
         "bacon/bacon-qr-code": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.0",
-        "orchestra/testbench": "^8.0|^9.0",
+        "phpunit/phpunit": "^10.0|^11.0",
+        "orchestra/testbench": "^8.0|^9.0|^10.0",
         "mockery/mockery": "^1.5",
         "laravel/pint": "^1.0"
     },
